--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -3,15 +3,34 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.7/semantic.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.7/semantic.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
+    <link rel="stylesheet" href="./static/css/style.css">
     <title>todo_vuejs</title>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script>
+      document.querySelector('.add_task_content').addEventListener('click', function () {
+          var content = document.querySelector('.content_area')
+          var form = document.querySelector('.add_task_form')
+
+          if(content.style.top === "120px" || content.style.top === "") {
+              form.style.height = '80px'
+              content.style.top = '200px'
+          } else {
+              form.style.height = '0px'
+              content.style.top = "120px"
+          }
+      })
+      //make item done
+      document.querySelectorAll('.task').forEach(function (item) {
+          //make item done
+          console.log(item.querySelector('.check'))
+          item.querySelector('.check').addEventListener('change', function () {
+              alert("hello")
+          })
+      })
+  </script>
 </html>
+
